--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,31 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.keynes.rollcall.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <Space
+        android:id="@+id/dummy"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/button_teacher"
+        android:layout_width="120dp"
+        android:layout_height="64dp"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/dummy"
+        android:text="@string/teacher_button"
+        android:textSize="32sp"/>
+
+    <Button
+        android:id="@+id/button_student"
+        android:layout_width="120dp"
+        android:layout_height="64dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/dummy"
+        android:text="@string/student_button"
+        android:textSize="32sp"/>
+
 </RelativeLayout>
