--- a/app/src/main/res/layout/activity_student_action.xml
+++ b/app/src/main/res/layout/activity_student_action.xml
@@ -4,10 +4,32 @@
     android:id="@+id/activity_student_action"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.keynes.rollcall.StudentActionActivity">
+
+    <Space
+        android:id="@+id/dummy"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/button_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/dummy"
+        android:text="點名"
+        android:onClick="rollCall"/>
+
+    <Button
+        android:id="@+id/button_query"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/dummy"
+        android:text="查詢出席"/>
 
 </RelativeLayout>
